# interactive_perception

./: run_simulation.sh  setup_paths.sh
Code/: Installation Intructions.txt
Code/robot_controller2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
Code/robot_controller2/Util/: launch_notes
Code/robot_controller2/action/: MyAction.action
Code/robot_controller2/robot_controller2/: Evaluation.py  GT_Visualizer.py  Graph.py  Object_knowledge.py  Reasoner.py  Reasoner_refactored.py  Templates.py  Util.py  Visualizer.py  __init__.py
Code/robot_controller2/robot_controller2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Code/robot_controller2/robot_controller2/config/: reasoner_config.yaml
Code/robot_controller2/robot_controller2/resources/: config2.rviz
Results_final/Results/Experiment 1/Run 1/: results_experiment_1_run_1.csv
Results_final/Results/Experiment 1/Run 2/: results_experiment_1_run_2.csv
Results_final/Results/Experiment 1/Run 3/: results_experiment_1_run_3.csv
Results_final/Results/Experiment 2/Run 1/: results_experiment_2_run_1.csv
Results_final/Results/Experiment 2/Run 2/: results_experiment_2_run_2.csv
Results_final/Results/Experiment 2/Run 3/: results_experiment_2_run_3.csv
core_algorithm/: package.xml  requirements.txt  setup.py
core_algorithm/core_algorithm/: __init__.py  algorithm.py  data_structures.py  helper.py  polygon_knowledge.py  symbolic_policy.py
simulate_algorithm/: README.md  __init__.py  algorithm.py  data_structures.py  helper.py  polygon_knowledge.py  setup.py  simulation.py
(+12 files in other folders)
