<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>core_algorithm</name>
  <version>1.0.0</version>
  <description>Core algorithm for polygon exploration and motion reasoning</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <author email="user@todo.todo">user</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-matplotlib</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
